modified:   README.md 	modified:   angular.json 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.component.html 	modified:   src/app/app.module.ts 	new file:   src/app/calculate-model/OnlyNumber 	new file:   src/app/calculate-model/calculate-model.component.css 	new file:   src/app/calculate-model/calculate-model.component.html#     new file:   src/app/calculate-model/calculate-model.component.spec.ts 	new file:   src/app/calculate-model/calculate-model.component.ts 	new file:   src/app/contact-form/contact-form.component.css 	new file:   src/app/contact-form/contact-form.component.html 	new file:   src/app/contact-form/contact-form.component.spec.ts 	new file:   src/app/contact-form/contact-form.component.ts 	new file:   src/app/contact-form/dialog/dialog.component.css 	new file:   src/app/contact-form/dialog/dialog.component.html 	new file:   src/app/contact-form/dialog/dialog.component.spec.ts 	new file:   src/app/contact-form/dialog/dialog.component.ts 	new file:   src/app/contact.service.spec.ts     new file:   src/app/contact.service.ts 	new file:   src/app/core/components/header/header.component.css 	new file:   src/app/core/components/header/header.component.html 	new file:   src/app/core/components/header/header.component.ts 	new file:   src/app/core/components/home/home.component.css 	new file:   src/app/core/components/home/home.component.html 	new file:   src/app/core/components/home/home.component.ts 	new file:   "src/assets/Images/Komuniik\303\241cia.png" 	new file:   "src/assets/Images/VrstvyIMSarchitekt\303\272ry.png" 	new file:   src/assets/Images/favicon2.png 	new file:   "src/assets/Images/riadiacaau\305\276\303\255vatelskarovina.png" 	new file:   src/assets/favicon2.png 	new file:   src/custom-theme.scss 	new file:   src/favicon2.png 	modified:   src/index.html 	modified:   src/polyfills.ts 	modified:   src/styles.css 	new file:   tailwind.config.js 	modified:   tsconfig.

--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,13 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
+              "src/favicon2.png",
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
