--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@angular/platform-browser": "^15.2.4",
     "@angular/platform-browser-dynamic": "^15.2.4",
     "@angular/router": "^15.2.4",
-    "@swimlane/ngx-charts": "^20.1.2",
     "bootstrap": "^4.6.2",
+    "highcharts": "^10.3.3",
+    "highcharts-angular": "^3.1.2",
     "ngx-line-chart": "^1.0.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^2.2.19",
@@ -45,7 +46,7 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.9.1",
     "tslint": "~6.1.0",
     "typescript": "^4.9.5"
   }
